--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -1,12 +1,12 @@
 % !TeX spellcheck = en_US
 %\section{Motivation}
 "Scientific publications have at least two goals: (i) to announce a result and (ii) to convince readers that the result is correct" \citep{Mesirov2010}.
-This paradigm has ruled the world of scientific publications since its beginnings, but the last two decades proved to provide challenges for it. With the improvement and further development of computational tools, more advanced analysis and complex computation \todo{narrow this down or add another word} are available to a broader audience by software packages and tools. Now, people who have no or very little background in Mathematics or Computer Science face the challenge to comply with the second point mentioned by \citeauthor{Mesirov2010}. Also with increasing complexity it becomes challenging to describe the complicated workflow within the word limitation of a normal publication.
+This paradigm has ruled the world of scientific publications since its beginnings, but the last two decades proved to provide challenges for it. With the improvement and further development of computational tools, more advanced analysis and complex computation methods are available to a broader audience by software packages and tools. Now, people who have no or very little background in Mathematics or Computer Science face the challenge to comply with the second point mentioned by \citeauthor{Mesirov2010}. Also with increasing complexity it becomes challenging to describe the complicated workflow within the word limitation of a normal publication.
 For instance, biologists can now easily acquire large DNA or RNA sequencing datasets, which  are too large to analyze manually.
 This data first needs to be preprocessed in order to extract meaningful results. %Those data needs to be sanitized, converted and condensed, to make sense out of it.
 Very often researchers without a computer science background do not accurately describe their methodology, hence resulting findings can not accurately be reproduced \citep{Peng2011}.
 %Resulting publications often only pay little attention to the computational processes involved or even to the used algorithms \citep{Peng2011}.
-\todo{Since the work cannot be reproduced, it is not possible to build up upon the findings and therefore can be used prove the hypothesis.}
+\todo{Since the work cannot be reproduced, it is not possible to build upon the findings and therefore can be used prove the hypothesis.}
 %But why is it of such a tremendous importance to know exactly every step leading to a result? Basically this is the foundation of scientific publications and peer review. Without in-depth knowledge of the methods, the environment and the workflow it is impossible to reproduce the experiment or observation and therefore it is impossible to prove or disprove the correctness of the assumption. 
 %This inability may lead into blind trust in publications, making room for wrong or made-up scientific findings.
 Especially valuable are these information, when dealing with studies, which may not be easily independently redone, because of resource, time or financial constraints \citep{Peng2011}.
