--- a/tex/results.tex
+++ b/tex/results.tex
@@ -9,7 +9,7 @@ The schema was designed around a \texttt{DIFF} node, which is linked by \texttt{
 The successor and predecessor relations define the version history, whereby the \texttt{DIFF} node clearly indicates the delta between those versions. The \texttt{diffPart} attribute of the \texttt{HAS\_DIFF} relations specifies the direction of the delta, and therefore the role of the participating \texttt{DOCUMENT} nodes. In accordance to the ER model, the role can either be \emph{source} or \emph{destination}.
 These terms were chosen, due to their expressiveness in regards to temporal aspects. Otherwise an implication of order, like terms as \emph{old} and \emph{new} suggest, may cause confusion in case of reverse deltas or deltas between completely different models.
 
-However, the central \texttt{DIFF} node links to various changes, using the \texttt{HAS\_DIFF\_ENTRY} relation. Since \neoj supports multiple labels per node, the 4 change types \texttt{DIFF\_INSERT}, \texttt{DIFF\_DELETE}, \texttt{DIFF\_UPDATE}, and \texttt{DIFF\_MOVE} can be grouped together using an additional label \texttt{DIFF\_NODE}. This simplifies queries and will eventually speed them up, because all change types are kept in a single index.
+However, the central \texttt{DIFF} node links to various changes, using the\linebreak \texttt{HAS\_DIFF\_ENTRY} relation. Since \neoj supports multiple labels per node, the 4 change types \texttt{DIFF\_INSERT}, \texttt{DIFF\_DELETE}, \texttt{DIFF\_UPDATE}, and \texttt{DIFF\_MOVE} can be grouped together using an additional label \texttt{DIFF\_NODE}. This simplifies queries and will eventually speed them up, because all change types are kept in a single index.
 Any kind of \texttt{DIFF\_NODE} might link to any node beneath the \texttt{DOCUMENT} node in at least one of the two compared models, in correspondence to the type of change.
 As illustrated by the \texttt{DIFF\_UPDATE} node in Figure \ref{fig:results:simple-diff} (small yellow node, labeled with a \emph{2}). On one hand it connects to the species \emph{A} in the \emph{source} version of the model using the \texttt{IS\_SOURCE} relation. On the other hand it also connects to the updated counterpart in this case species \emph{A} in the \emph{destination} version. It is connected using the \texttt{IS\_DESTINATION} relation.
 Furthermore a causality chain among changes is expressed by the \texttt{DIFF\_TRIGGERED\_BY} relation, which points from one \texttt{DIFF\_NODE} to another. This is illustrated by the \texttt{DIFF\_INSERT}, labeled with the number \emph{3}, in Figure \ref{fig:results:simple-diff}. This insert caused four other inserts, describing the insertion of id, name, compartment reference, and initial concentration.
