improved neo4j renders

--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -49,12 +49,12 @@
 \label{sec:appendix:simple-demo:v2}
 \lstinputlisting[language=XML]{../supplementary/demo-sbml-simple/version2.xml}
 
-\chapter[Render of a Delta]{Render of Delta between a more advanced demo model}
+\section[Render of a Delta]{Complete render of the delta graph network}
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=\textwidth]{resources/neo4j-renders/demo-sbml-diff.pdf}
+	\includegraphics[width=\textwidth]{resources/neo4j-renders/demo-sbml-simple-diff-complete.pdf}
 	\caption{\neoj graph representation of a delta between two demo models}
-	\label{fig:appendix:demo-sbml-diff}
+	\label{fig:appendix:demo-sbml-simple-diff}
 \end{figure}
 
 \chapter{Representation of \comodi in \masymos}
