some minor/random fixes

--- a/tex/appendix.tex
+++ b/tex/appendix.tex
@@ -44,16 +44,18 @@
 \section{Simple demo SBML version1}
 \label{sec:appendix:simple-demo:v1}
 \lstinputlisting[language=XML]{../supplementary/demo-sbml-simple/version1.xml}
+\pagebreak
 
 \section{Simple demo SBML version2}
 \label{sec:appendix:simple-demo:v2}
 \lstinputlisting[language=XML]{../supplementary/demo-sbml-simple/version2.xml}
+\pagebreak
 
 \section[Render of a Delta]{Complete render of the delta graph network}
-\begin{figure}[h]
+\begin{figure}[H]
 	\centering
 	\includegraphics[width=\textwidth]{resources/neo4j-renders/demo-sbml-simple-diff-complete.pdf}
-	\caption{\neoj graph representation of a delta between two demo models}
+	\caption[\neoj graph representation of a delta between two demo models]{\neoj graph representation of a delta between two demo models. This is the full version of the simplified delta shown in Figure \ref{fig:results:simple-diff}}
 	\label{fig:appendix:demo-sbml-simple-diff}
 \end{figure}
 
@@ -67,8 +69,8 @@
 \end{figure}
 
 \chapter{Overview of Node- and Relationship types}
+\chaptermark{Node- and Relationship types}
 \label{sec:appendix:meta-map}
-\todo{tables are ugly as hell...}
 \todo{write introduction thingy, where these numbers are coming from}
 
 \section{Graphical Overview}
