--- a/tex/results.tex
+++ b/tex/results.tex
@@ -63,9 +63,7 @@ The objective of this thesis is therefore to investigate into a concept to store
 \begin{figure}
 	\centering
 	\includegraphics[width=\textwidth]{resources/neo4j-renders/demo-sbml-simple-diff.pdf}
-	\caption[Reduced representation of a delta in \masymos, between two versions of a the simple \sbml demo model]{Reduced representation of a delta in \masymos, between two versions of a the simple \sbml demo model. The delta, organized around the \texttt{DIFF} node, only shows changes, with a direct match in the graph representation. Further most up traversing relations are not shown, to increase readability.}
+	\caption[Reduced representation of a delta in \masymos, between two versions of a the simple \sbml demo model]{Reduced representation of a delta in \masymos, between two versions of a the simple \sbml demo model. The delta, organized around the \texttt{DIFF} node shows only changes with a direct match in the graph representation. Further most up traversing relations are not shown, to increase readability.
+	The small nodes are \texttt{DIFF\_NODE} representing either inserts (green) or a update (yellow) in this example. A full version can be seen in Appendix \ref{fig:appendix:demo-sbml-simple-diff}}
 	\label{fig:results:simple-diff}
-	\todo{show \comodi as ontology}
-	\todo{Make relation names readable}
-	\todo{colorize the different diff nodes}
 \end{figure}
