changed title of the thesis

--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -47,9 +47,10 @@
 
 \input{shortcuts.tex}
 
-\title{Conception and Prototypic Implementation of a Storage Solution for Models with Multiple Versions}
-\author{Martin Peters\\[12pt]
-	\small Department of Systems Biology and Bioinformatics\\
+%\title{Conception and Prototypic Implementation of a Storage Solution for Models with Multiple Versions}
+\title{Storage solution for Models with Multiple Versions in \sysbio:\\ Concept and Prototype Implementation}
+\author{Martin Peters\\[24pt]
+	\small Department of Systems Biology and Bioinformatics\\[-6pt]
 	\small University of Rostock}
 \date{\today}
 
