--- a/tex/shortcuts.tex
+++ b/tex/shortcuts.tex
@@ -23,7 +23,7 @@
 \newcommand{\neoj}{Neo4j\xspace}
 \newcommand{\modelcrawler}{Model~Crawler\xspace}
 
-\newcommand{\sysbio}{Systems Biology\xspace}
+\newcommand{\sysbio}{Systems~Biology\xspace}
 \newcommand{\rest}{REST\xspace}  % like in REST interface
 
 % TODO command
