--- a/tex/ba-main.tex
+++ b/tex/ba-main.tex
@@ -19,6 +19,7 @@
 \usepackage{listings}
 \usepackage{csvsimple}
 \usepackage{longtable}
+\usepackage{parskip}
 
 \usepackage{amssymb}
 \usepackage{amsmath}
